# web-console-rs

./: Cargo.toml
src/: file.rs  job.rs  main.rs  monitor.rs  tcp_connector.rs
static/: index.html
