[package]
edition = "2021"
name = "web-console-rs"
version = "0.1.0"
[dependencies]
actix = "*"
actix-files = "0.5.0"
actix-web = { version = "3", features = ["openssl"] }
actix-web-actors = "*"
actix-multipart = "*"
actix-redis = "*"
actix-rt = "*"
dotenv = "*"
futures-util = "*"
openssl = { version = "0.10", features = ["v110"] }
once_cell = "*"
redis-async = "*"
sanitize-filename = "*"
sys-info = "*"
systemstat = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "*", features = ["process"] }
tokio-util = { version = "*", features = ["codec"] }
futures = "*"